format code Add index on database by category
